[metadata]
name = wagtail-all-in-one-accessibility
version = 2.0
description = A wagtail App based on assistive technology that helps organizations enhance the accessibility and usability of their website
long_description = file: Readme.md
url = https://www.skynettechnologies.com
author = Skynet Technologies USA LLC
author_email = developer3@skynettechnologies.com
classifiers = 
	Environment :: Web Environment
	Framework :: wagtail
	Framework :: wagtail :: >=5.2,<=7.1
	Framework :: Django
	Framework :: Django :: >=4.2,<5.3
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires = 
	Django>=4.2,<5.3
	wagtail>=5.2,<=7.1

[egg_info]
tag_build = 
tag_date = 0

