[metadata]
name = wagtail-all-in-one-accessibility
version = 2.1.0
description = Website accessibility widget for improving WCAG 2.0, 2.1, 2.2 and ADA compliance!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.skynettechnologies.com
author = Skynet Technologies USA LLC
author_email = developer3@skynettechnologies.com
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.13
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires = 
	Django>=4.2,<5.3
	wagtail>=5.2,<=7.1

[egg_info]
tag_build = 
tag_date = 0

